--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 group = 'org.launchcode'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+sourceCompatibility = '14'
 
 configurations {
 	developmentOnly
@@ -14,11 +15,9 @@ configurations {
 		extendsFrom developmentOnly
 	}
 }
-
 repositories {
 	mavenCentral()
 }
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -28,7 +27,6 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 }
-
 test {
 	useJUnitPlatform()
 }
